src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_include.deca
// Description:
//    Programme minimaliste testant le include.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


#include "fichier_1.txt"

