src/test/deca/syntax/invalid/provided/chaine_non_conforme_01.deca
// Description:
//    tests de programme incorrect lexicalement (chaine non conforme)
//
// Resultats:
//    ligne 10 : Erreur, chaine non conforme 
//
// Historique:
//    cree le 04/01/2023

"01"
